# python-project-83

./: .env.j2  .gitignore  Makefile  README.md  build.sh  database.sql  hosts.ini  make_deploy.yml  pyproject.toml
.github/workflows/: deploy.yml  lint_and_deploy.yml  main.yml
ansible/: ansible.cfg  make_deploy.yml
page_analyzer/: app.py  check_url.py  constants.py  db.py  validator.py
page_analyzer/templates/: 404.html  index.html  layout.html  show.html  urls.html
