[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer - Check websites for SEO suitability for free"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers"
]
authors = ["Asgef <asgefes1@gmail.com>"]
repository = "https://github.com/Asgef/python-project-83"
readme = "README.md"
packages = [
    {include = "page_analyzer"}
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
validators = "^0.27.0"
requests = "^2.31.0"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
